updated config file with vis42R

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: VIS 42
+title: VIS 42R
 description: A foundational course on programming and computational thinking in the arts.
 theme: jekyll-theme-primer
 
